<resources>
    <string name="app_name">From The Guardian</string>
    <string name="the_guardian">The Guardian</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="section_world">World</string>
    <string name="section_australia">Australia</string>
    <string name="section_technology">Technology</string>
    <string name="section_science">Science</string>
    <string name="section_sport">Sport</string>

    <string name="no_internet_connection">No Internet connection.</string>
    <string name="no_news_data">No news data found.</string>

    <string name="no_title">No title</string>
    <string name="no_author">No author</string>
    <string name="no_date">No date</string>
    <string name="no_section">No section</string>
    <string name="no_link">No link</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="settings_title">Settings</string>

    <!-- Settings Activity Title -->
    <string name="title_activity_settings">Settings</string>
    <!-- Settings Menu Item -->
    <string name="settings_menu_item">Settings</string>

    <!-- Strings for Maximum Results Preference [CHAR LIMIT=30] -->
    <string name="settings_max_results_label">Maximum Results</string>
    <string name="settings_max_results_key" translatable="false">max_results</string>
    <string name="settings_max_results_default" translatable="false">10</string>

    <!-- Toast message alerting the number of results is 40 [CHAR LIMIT=30]-->
    <string name="min_nbr_results">The minimum number of results is 1.</string>
    <!-- Toast message alerting the number of results is 40 [CHAR LIMIT=30]-->
    <string name="max_nbr_results">The maximum number of results is 50.</string>

</resources>
