<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_menu_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_world"
            android:title="@string/section_world" />
        <item
            android:id="@+id/nav_australia"
            android:title="@string/section_australia" />
        <item
            android:id="@+id/nav_technology"
            android:title="@string/section_technology" />
        <item
            android:id="@+id/nav_science"
            android:title="@string/section_science" />
        <item
            android:id="@+id/nav_sport"
            android:title="@string/section_sport" />
    </group>

</menu>
